	* Updated ChannelLogger not to log messages starting with
	[nolog], in order to allow private information to remain private.

	* Added a configuration variable to ChannelLogger,
	flushImmediately, to cause all channel logs to be flushed every
	time they're modified, for those people who like to read the logs
	through tail -f or something similar.
	
	* Updated WordStats to allow removing of tracked words.

	* Updated Seen.seen to accept no arguments and return the last
	message spoken by anyone.

	* Updated the Herald plugin to use the standard substitute until
	we get it updated to use commands as heralds instead of plain
	strings.

	* Updated echo to use the standard substitute on its reply.

	* Updated Network.whois so that it can now retrieve
	information on all domains.

	* Updated the Weather plugin to be retrieve weather from either
	hamweather.net or cnn.com.  Also added
	supybot.plugins.Weather.{command,temperatureUnit} so that you can
	specify which command (Weather.cnn or Weather.ham) to use when
	Weather.weather is called and in which unit (C, F, K) to report
	the weather.

	* Updated standard replies (such as supybot.replies.success, etc.)
	to use the standard substitute (such as $nick, $who, $channel,
	etc.) in their text.

	* Fixed snarfers to respect lobotomies.

	* Fixed Admin.join not to add the channel to the supybot.channels
	registry entry if joining the channel wasn't successful.

2004-02-20  Jeremy Fincher  <jemfinch@supybot.org>

	* Version 0.77.0!

	* Changed the format of the user and channel databases to
	something much more readable and user-editable.  Be sure, if
	you're upgrading, to run tools/ircdbConvert.py on your user and
	channel databases *BEFORE* installing the new version.

	* Updated almost every document we have, and added a
	GETTING_STARTED document.  Yay!

	* Added several new options for Channel.kban: --exact, --nick,
	--user, --host, for more flexibility in determining what the
	banmask is.
